--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,13 +11,13 @@ node_modules
 dist
 dist-ssr
 *.local
-.history
+*.history
+.history/
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
-.history
 .DS_Store
 *.suo
 *.ntvs*
